k8s/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: cloudsync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:21.0.0
        args:
        - "start-dev"
        - "--http-relative-path=/auth"
        - "--proxy=edge"
        - "--hostname-strict=false"
        - "--hostname-strict-https=false"
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /auth/realms/master
            port: 8080
          initialDelaySeconds: 45
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /auth/realms/master
            port: 8080
          initialDelaySeconds: 90
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-svc
  namespace: cloudsync
spec:
  selector:
    app: keycloak
  ports:
    - name: http
      port: 8080
      targetPort: 8080
